Compilation issues in the server module were fixed.